@@ -1,51 +1,0 @@
-# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
-
-language: c
-sudo: required
-dist: bionic
-
-env:
-  global:
-    # this should already be set per https://docs.travis-ci.com/user/environment-variables/
-    # and presumably was once set in older Travis versions but now we need it
-    - TRAVIS_SECURE_ENV_VARS="true"
-    # turn tests on (just to make sure by browser extension gets spammed ...)
-    - Run_RPushbullet_Tests="yes"
-    # condition this on have secure environment variables which PRs off forks do not
-    # cf https://docs.travis-ci.com/user/environment-variables/
-    #- if [ "$TRAVIS_SECURE_ENV_VARS" == "true" ]; then Run_RPushbullet_Tests="yes"; fi
-    #- if [ "$TRAVIS_SECURE_ENV_VARS" == "true" ]; then Run_RPushbullet_Tests_All="yes"; fi
-
-jobs:
-  include:
-    #- name: r-3.5
-    #  env: R_VERSION="3.5"
-    - name: r-4.0
-      env: R_VERSION="4.0"
-
-    
-before_install:
-  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  - ./run.sh bootstrap
-  # decrypt the file .rpushbullet.json, cf https://docs.travis-ci.com/user/encrypting-files/
-  # condition this on have secure environment variables which PRs off forks do not
-  # cf https://docs.travis-ci.com/user/environment-variables/
-  - if [[ "${TRAVIS_SECURE_ENV_VARS}" == "true" ]]; then openssl aes-256-cbc -K $encrypted_988d19a907a0_key -iv $encrypted_988d19a907a0_iv -in .rpushbullet.json.enc -out ~/.rpushbullet.json -d; fi
-
-install:
-  - ./run.sh install_aptget r-cran-curl r-cran-jsonlite
-
-script:
-  - if [[ "${TRAVIS_PULL_REQUEST}" == "false" ]]; then ./run.sh run_tests; fi
-
-after_failure:
-  - ./run.sh dump_logs
-
-after_success:
-  - if [[ "${TRAVIS_PULL_REQUEST}" == "false" ]]; then ./run.sh coverage; fi
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
-
